--- a/src/app/components/top-bar/top-bar-options/top-bar-options.component.css
+++ b/src/app/components/top-bar/top-bar-options/top-bar-options.component.css
@@ -7,4 +7,8 @@
 }
 .topBarOptions img{
     width: 30px;
+    border: var(--border);
+    border-radius: 50%;
+    padding: 5px;
+    background-color: var(--common-png-background-color);
 }
