--- a/src/app/components/top-bar/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar/top-bar.component.html
@@ -1,5 +1,5 @@
 <div class="topBar">
-<img src="{{icon}}">
+<img src="{{icon}}" class="topBarUserIcon">
 <app-top-bar-options></app-top-bar-options>
 </div>
 
