--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+:root{
+    --border: 2px solid transparent;
+}
 body{
     padding: 0px;
     margin: 0px;
