Stated my work on explore Component

--- a/src/app/components/explore/side-bar/side-bar.component.html
+++ b/src/app/components/explore/side-bar/side-bar.component.html
@@ -1,1 +1,6 @@
-<p>side-bar works!</p>
+<div>
+    <span>Home</span>
+    <span>Inbox</span>
+    <span>Chefs</span>
+    <span>Profile</span>
+</div>
