--- a/src/app/components/explore/explore.component.html
+++ b/src/app/components/explore/explore.component.html
@@ -1,1 +1,5 @@
-<p>explore works!</p>
+<div class="explore">
+<app-search-bar></app-search-bar>
+<app-recipe-card></app-recipe-card>
+<app-side-bar></app-side-bar>
+</div>
