--- a/src/app/components/explore/recipe-card/recipe-card.component.html
+++ b/src/app/components/explore/recipe-card/recipe-card.component.html
@@ -1,1 +1,8 @@
-<p>recipe-card works!</p>
+<div>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlM17-zxYOLkKbUhIoZS99NDjLlfS5fnXtVoiVCW3cBQ&s">
+    <span>Pasta</span>
+    <span>Difficulty level</span>
+    <span>Healty Level</span>
+    <span>122</span>
+    <img src="">
+</div>
