--- a/src/app/components/explore/explore.component.html
+++ b/src/app/components/explore/explore.component.html
@@ -1,5 +1,7 @@
 <div class="explore">
-<app-search-bar></app-search-bar>
-<app-recipe-card></app-recipe-card>
 <app-side-bar></app-side-bar>
+    <div class="exploreChangeableContent">
+        <app-search-bar></app-search-bar>
+        <app-recipe-card></app-recipe-card>
+    </div>
 </div>
