--- a/src/app/components/explore/search-bar/search-bar.component.html
+++ b/src/app/components/explore/search-bar/search-bar.component.html
@@ -1,4 +1,6 @@
-<form>
-    <input>
-    <button>Search</button>
-</form>
+
+    <form action="/search" method="get" class="searchBar">
+        <input placeholder="What you want to cook?">
+        <button><img src="{{searchIcon}}"></button>
+    </form>
+
