--- a/src/app/components/explore/recipe-card/recipe-card.component.css
+++ b/src/app/components/explore/recipe-card/recipe-card.component.css
@@ -2,8 +2,10 @@
     width: max-content;
     padding: 5px;
     display: block;
+    width: 300px;
+    height: 315px;
     background-color: white;
-    border: 2px solid black;
+    box-shadow: 0px 0px 10px 2px  rgb(192, 192, 192);
     border-radius: 5px;
 }
 .imageOfDish{
@@ -12,4 +14,14 @@
 }
 .itemName{
     display: block;
+}
+.priceOfItem{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+.priceOfItem img{
+    transform: rotate(270deg);
+    width: 20px;
+    margin-left: 2px;
 }
