--- a/src/app/components/explore/explore.component.html
+++ b/src/app/components/explore/explore.component.html
@@ -2,6 +2,6 @@
 <app-side-bar></app-side-bar>
     <div class="exploreChangeableContent">
         <app-search-bar></app-search-bar>
-        <app-recipe-card></app-recipe-card>
+        <router-outlet></router-outlet>
     </div>
 </div>
