--- a/src/app/components/explore/recipe-card/recipe-card.component.html
+++ b/src/app/components/explore/recipe-card/recipe-card.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let item of items" class="outerDiv">
+<div *ngFor="let item of items" class="outerDiv" appClickNavigation url="{{item.id}}">
     <img src="{{item.img}}" class="imageOfDish">
     <span class="itemName">{{item.name}}</span>
     <app-difficulty-level [level]="item.difficultyLevel" type="Difficulty Level"></app-difficulty-level>
