Started details component

--- a/src/app/components/details-about-articles/details-about-articles.component.html
+++ b/src/app/components/details-about-articles/details-about-articles.component.html
@@ -1,1 +1,16 @@
-<p>details-about-articles works!</p>
+<div>
+    <span>Pasta</span>
+    <app-description-component></app-description-component>
+    <app-multi-media-details-intro></app-multi-media-details-intro>
+</div>
+<div>
+    <span>Incideinets</span>
+    <ul>
+        <li>hi</li>
+    </ul>
+</div>
+<div>
+    <span>Procdeure</span>
+    <app-procedure-component></app-procedure-component>
+</div>
+<app-comment-section></app-comment-section>
