--- a/src/app/components/details-about-articles/multi-media-details-intro/multi-media-details-intro.component.html
+++ b/src/app/components/details-about-articles/multi-media-details-intro/multi-media-details-intro.component.html
@@ -1,1 +1,4 @@
-<p>multi-media-details-intro works!</p>
+<video controls>
+    <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video> 
