Made the first component look accordinly

--- a/src/app/components/explore/explore.component.css
+++ b/src/app/components/explore/explore.component.css
@@ -1,7 +1,8 @@
 .explore{
+
     display: grid;
     grid-template-columns: max-content 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows:max-content 1fr;
     height: 100%;
    
 }
