--- a/src/app/components/explore/explore.component.html
+++ b/src/app/components/explore/explore.component.html
@@ -1,4 +1,5 @@
 <div class="explore">
+<app-top-bar></app-top-bar>
 <app-side-bar></app-side-bar>
     <div class="exploreChangeableContent">
         <app-search-bar></app-search-bar>
