Moved all the images

--- a/src/app/components/explore/bottom-bar/bottom-bar.component.html
+++ b/src/app/components/explore/bottom-bar/bottom-bar.component.html
@@ -1,8 +1,8 @@
 <div class="bottombar">
-    <img src='home.png'>
+    
     <div class="eachpath" *ngFor="let button of buttons">
-        <!-- <img src="{{button.img}}" width="30px" height="40px">
-        <span>{{button.path}}</span> -->
+        <img src="{{button.img}}" width="30px" height="40px">
+        <span>{{button.path}}</span>
 
     </div>
 </div>
