Started working on the login

--- a/src/app/components/authentication/log-in/log-in.component.html
+++ b/src/app/components/authentication/log-in/log-in.component.html
@@ -1,1 +1,9 @@
-<p>log-in works!</p>
+<div>
+    <span>Login</span>
+    <input placeholder="Enter username or password">
+    <input placeholder="Enter password" type="text">
+    <button>Login</button>
+    <span>Create account or Sign-Up Using!</span>
+    <img src="google.png">
+    <img src="twitter.png">
+</div>
