--- a/src/app/components/authentication/log-in/log-in.component.html
+++ b/src/app/components/authentication/log-in/log-in.component.html
@@ -1,9 +1,11 @@
-<div>
-    <span>Login</span>
+<form class="outerDiv">
+    <span class="heading">Login</span>
     <input placeholder="Enter username or password">
     <input placeholder="Enter password" type="text">
     <button>Login</button>
-    <span>Create account or Sign-Up Using!</span>
-    <img src="google.png">
-    <img src="twitter.png">
-</div>
+    <span class="footer">Create account or Sign-Up Using!</span>
+    <div class="images">
+        <img src="google.png">
+        <img src="twitter.png">
+    </div>
+</form>
