Started my work on sign-up

--- a/src/app/components/authentication/log-in/log-in.component.html
+++ b/src/app/components/authentication/log-in/log-in.component.html
@@ -1,9 +1,9 @@
-<form class="outerDiv">
-    <span class="heading">Login</span>
+<form class="forms">
+    <span class="formHeading">Login</span>
     <input placeholder="Enter username or password">
     <input placeholder="Enter password" type="text">
     <button>Login</button>
-    <span class="footer">Create account or Sign-Up Using!</span>
+    <span class="footer"><a [routerLink]="'/signUp'">Create account</a> or Sign-Up Using!</span>
     <div class="images">
         <img src="google.png">
         <img src="twitter.png">
