--- a/src/app/components/authentication/sign-up/sign-up.component.html
+++ b/src/app/components/authentication/sign-up/sign-up.component.html
@@ -1,1 +1,9 @@
-<p>sign-up works!</p>
+
+    <form class="forms">
+        <span class="formHeading">Sign-Up</span>
+        <input placeholder="Email Address">
+        <input placeholder="Username">
+        <input placeholder="Password">
+        <input type="file">
+    </form>
+
