--- a/src/app/components/authentication/sign-up/sign-up.component.html
+++ b/src/app/components/authentication/sign-up/sign-up.component.html
@@ -1,9 +1,10 @@
 
-    <form class="forms">
+    <form class="forms" [formGroup]="signUpForm" (ngSubmit)="formSubmitted()">
         <span class="formHeading">Sign-Up</span>
         <input placeholder="Email Address">
         <input placeholder="Username">
         <input placeholder="Password">
         <input type="file">
+        <button>Sign-Up</button>
     </form>
 
