--- a/src/app/components/authentication/sign-up/sign-up.component.html
+++ b/src/app/components/authentication/sign-up/sign-up.component.html
@@ -1,9 +1,9 @@
 
     <form class="forms" [formGroup]="signUpForm" (ngSubmit)="formSubmitted()">
         <span class="formHeading">Sign-Up</span>
-        <input placeholder="Email Address">
-        <input placeholder="Username">
-        <input placeholder="Password">
+        <input placeholder="Email Address" formControlName="username">
+        <input placeholder="Username" formControlName="email">
+        <input placeholder="Password" formControlName="password">
         <input type="file">
         <button>Sign-Up</button>
     </form>
