--- a/src/app/components/authentication/sign-up/sign-up.component.html
+++ b/src/app/components/authentication/sign-up/sign-up.component.html
@@ -4,7 +4,9 @@
         <input placeholder="Email Address" formControlName="username">
         <input placeholder="Username" formControlName="email">
         <input placeholder="Password" formControlName="password">
-        <input type="file">
-        <button>Sign-Up</button>
+        <div class="visualFiles">
+            <input type="file" class="fileUploader">
+        </div>
+        <button class="submitButton">Sign-Up</button>
     </form>
 
