--- a/src/app/components/authentication/sign-up/sign-up.component.css
+++ b/src/app/components/authentication/sign-up/sign-up.component.css
@@ -6,3 +6,51 @@
     justify-content: center;
 
 }
+.forms{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(5,1fr);
+}
+.visualFiles{
+    justify-self: center;
+    align-self: stretch;
+    position: relative;
+    width: 80%;
+    height: 70%;
+    border: 2px dashed grey;
+    border-radius: 20px;
+    grid-column: 2/3;
+    grid-row: 2/6;
+    overflow: hidden;
+}
+.visualFiles::before{
+    content: '+';
+    font-size: 30px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    background-color: rgba(156, 156, 156, 0.397);
+}
+.formHeading{
+    grid-column: 1/3;
+    text-align: center;
+}
+.fileUploader{
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    opacity: 0;
+}
+.submitButton{
+    grid-column: 1/3;
+    grid-row: 5/6;
+}
