Uploaded the images only the stying and uplading it to backend is left

--- a/src/app/components/authentication/sign-up/sign-up.component.html
+++ b/src/app/components/authentication/sign-up/sign-up.component.html
@@ -4,9 +4,11 @@
         <input placeholder="Email Address" formControlName="username">
         <input placeholder="Username" formControlName="email">
         <input placeholder="Password" formControlName="password">
-        <div class="visualFiles">
+        <div class="visualFiles" *ngIf="!fileDataUrl">
             <input (change)="fileUploaded($event)"  type="file" class="fileUploader">
         </div>
+
+        <img class="imageUploaded" *ngIf="fileDataUrl" [src]="fileDataUrl" [alt]="'loo'">
         <button class="submitButton">Sign-Up</button>
     </form>
 
