--- a/src/app/components/authentication/sign-up/sign-up.component.css
+++ b/src/app/components/authentication/sign-up/sign-up.component.css
@@ -54,3 +54,9 @@
     grid-column: 1/3;
     grid-row: 5/6;
 }
+.imageUploaded{
+    width: 100px;
+    height: 100px;
+    grid-column: 2/3;
+    grid-row: 2/6;
+}
