--- a/src/app/components/creator-sections/writing-recipe/individual-input-form/individual-input-form.component.html
+++ b/src/app/components/creator-sections/writing-recipe/individual-input-form/individual-input-form.component.html
@@ -9,7 +9,7 @@
       
       <ng-template [ngIf]="url">
         <div class="imagePreviewDiv">
-          <img src="../../../../../assets/kitchen-trash-bin.png" (click)="deleteImage()">
+          <img src="kitchen-trash-bin.png" (click)="deleteImage()">
           <img *ngSwitchCase="'file'" class="uploadedImage"   [src]="url">
         </div>
         </ng-template>
