--- a/src/app/components/authentication/log-in/log-in.component.html
+++ b/src/app/components/authentication/log-in/log-in.component.html
@@ -5,7 +5,7 @@
     <button>Login</button>
     <span class="footer"><a [routerLink]="'/signUp'">Create account</a> or Sign-Up Using!</span>
     <div class="images">
-        <img src="google.png">
-        <img src="twitter.png">
+        <a [href]="googleUrl"><img src="google.png"></a>
+        <a [href]="twitterLogin"><img src="twitter.png"></a>
     </div>
 </form>
