--- a/src/app/components/explore/recipe-card/recipe-card.component.html
+++ b/src/app/components/explore/recipe-card/recipe-card.component.html
@@ -1,6 +1,6 @@
 <div *ngFor="let item of items" class="outerDiv" appClickNavigation url="{{item.id}}">
     
-        <img src="{{item.img}}" class="imageOfDish">
+        <img ngSrc="{{item.img}}" class="imageOfDish">
     <div class="infoPortion">
         <span class="itemName">{{item.name}}</span>
         <app-difficulty-level [level]="item.difficultyLevel" type="Difficulty Level"></app-difficulty-level>
