--- a/src/app/components/explore/recipe-card/recipe-card.component.html
+++ b/src/app/components/explore/recipe-card/recipe-card.component.html
@@ -1,6 +1,7 @@
 <div *ngFor="let item of items" class="outerDiv" appClickNavigation url="{{item.id}}">
-    
-        <img ngSrc="{{item.img}}" class="imageOfDish">
+    <div style="background-repeat:  no-repeat; background-size: cover; filter: blur(1.5rem);" [ngStyle]="placeholder">
+        <img src="{{item.img}}" class="imageOfDish" (load)="hi()" loading="lazy">
+    </div>
     <div class="infoPortion">
         <span class="itemName">{{item.name}}</span>
         <app-difficulty-level [level]="item.difficultyLevel" type="Difficulty Level"></app-difficulty-level>
