Made the navigation to the articles

--- a/src/app/components/details-about-articles/multi-media-details-intro/multi-media-details-intro.component.css
+++ b/src/app/components/details-about-articles/multi-media-details-intro/multi-media-details-intro.component.css
@@ -8,3 +8,12 @@ video{
     grid-row-start: 1;
     grid-row-end: 3;
 }
+@media screen and (max-width:1547px) {
+    :host{
+        background-color: transparent;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 3;
+    }
+}
