--- a/src/app/components/details-about-articles/description-component/description-component.component.css
+++ b/src/app/components/details-about-articles/description-component/description-component.component.css
@@ -11,3 +11,12 @@ span{
 p{
     font-size: 18px;
 }
+@media screen and (max-width:1547px) {
+    :host{
+        background-color: transparent;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row-start: 1;
+        grid-row-end: 2;
+    }
+}
