--- a/src/app/components/details-about-articles/details-about-articles.component.css
+++ b/src/app/components/details-about-articles/details-about-articles.component.css
@@ -5,7 +5,6 @@
 }
 .upperPortion{
     display: grid;
-    width: 100%;
     grid-template-columns: 1fr max-content;
 }
 :host{
@@ -39,4 +38,22 @@
     font-size: 24px;
     font-weight: 600;
     text-decoration: underline;
+}
+:host{
+ display: block;
+ width: 98vw;
+}
+@media screen and (min-width:1906px) {
+    :host{
+        display: block;
+        width: 80vw;
+           
+       }
+}
+@media screen and (min-width:1999px) {
+    :host{
+        display: block;
+        width: 15000;
+           
+       }
 }
