--- a/src/app/components/details-about-articles/multi-media-details-intro/multi-media-details-intro.component.html
+++ b/src/app/components/details-about-articles/multi-media-details-intro/multi-media-details-intro.component.html
@@ -2,3 +2,4 @@
     <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video> 
+  <img>
