--- a/src/app/components/explore/recipe-card/recipe-card.component.html
+++ b/src/app/components/explore/recipe-card/recipe-card.component.html
@@ -1,6 +1,6 @@
-<div *ngFor="let item of items" class="outerDiv" appClickNavigation url="{{item.id}}">
+<div *ngFor="let item of items" class="outerDiv" appClickNavigation url="{{item.id}}" (click)="navigate(item.id)">
     <div style="background-repeat:  no-repeat; background-size: cover; filter: blur(1.5rem);" [ngStyle]="placeholder">
-        <img src="{{item.img}}" class="imageOfDish" (load)="hi()" loading="lazy">
+        <img src="{{item.img}}" class="imageOfDish" (load)="imageLoaded()" loading="lazy">
     </div>
     <div class="infoPortion">
         <span class="itemName">{{item.name}}</span>
