--- a/src/app/components/explore/side-bar/side-bar.component.html
+++ b/src/app/components/explore/side-bar/side-bar.component.html
@@ -1,6 +1,5 @@
 <div class="sideBar">
-    <span>Home</span>
-    <span>Inbox</span>
-    <span>Write</span>
-    <span>Profile</span>
+    <span routerLink="my-area">My Area</span>
+    <span routerLink="write">Write</span>
+    <span routerLink="account">Account</span>
 </div>
