Twitter oatuh done error handling left

--- a/src/app/components/authentication/log-in/log-in.component.html
+++ b/src/app/components/authentication/log-in/log-in.component.html
@@ -6,6 +6,6 @@
     <span class="footer"><a [routerLink]="'/signUp'">Create account</a> or Sign-Up Using!</span>
     <div class="images">
         <a [href]="googleUrl"><img src="google.png"></a>
-        <a [href]="twitterLogin"><img src="twitter.png"></a>
+        <img src="twitter.png" (click)="navToX()">
     </div>
 </form>
