Started to work on the account profile

--- a/src/app/components/components-for-logged-in-users/account/account.component.css
+++ b/src/app/components/components-for-logged-in-users/account/account.component.css
@@ -1,6 +1,6 @@
 .outerDiv{
     border: 2px solid black;
-    width: 1700px;
+    width: 80vw;
     display: block;
-    margin: auto;
+    margin: 20px auto;
 }
