Strarted to fetch from the seerver details compoent

--- a/src/app/components/details-about-articles/details-about-articles.component.html
+++ b/src/app/components/details-about-articles/details-about-articles.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="data">
 <div class="upperPortion">
     <span>{{data.name}}</span>
     <app-multi-media-details-intro></app-multi-media-details-intro>
@@ -15,3 +16,4 @@
     <app-procedure-component></app-procedure-component>
 </div>
 <app-comment-section></app-comment-section>
+</div>
