Styled a details section

--- a/src/app/components/details-about-articles/details-about-articles.component.html
+++ b/src/app/components/details-about-articles/details-about-articles.component.html
@@ -13,7 +13,7 @@
 </div>
 <div class="procedureSection">
     <span>Procdeure</span>
-    <app-procedure-component></app-procedure-component>
+    <app-procedure-component [steps]="steps"></app-procedure-component>
 </div>
 <app-comment-section></app-comment-section>
 </div>
