--- a/src/app/components/details-about-articles/procedure-component/procedure-component.component.html
+++ b/src/app/components/details-about-articles/procedure-component/procedure-component.component.html
@@ -1,4 +1,6 @@
-<div>
-<span class="stepNumberHeading">Step:1</span>
-<p>Boil the water</p>
+<div *ngFor="let step of steps;let i=index" class="outerBox">
+<span class="stepNumberHeading">Step:{{i}}</span>
+<span class="nameHeading">{{step.name}}</span>
+<p>{{step.description}}</p>
+<img *ngIf="step.image_url" src="{{step.image_url}}">
 </div>
