Working on explore componet only the insertsction observer api is left

--- a/src/app/components/details-about-articles/details-about-articles.component.html
+++ b/src/app/components/details-about-articles/details-about-articles.component.html
@@ -17,3 +17,5 @@
 </div>
 <app-comment-section></app-comment-section>
 </div>
+<app-error-from-server *ngIf="errorState"></app-error-from-server>
+<app-loading *ngIf="loadingState"></app-loading>
