--- a/src/app/components/explore/recipe-card/recipe-card.component.css
+++ b/src/app/components/explore/recipe-card/recipe-card.component.css
@@ -1,10 +1,9 @@
 .outerDiv{
-    
-    width: max-content;
-    padding: 5px;
+
+    padding: 5px 5px 15px 5px;
     display: block;
     width: 300px;
-    height: 315px;
+ 
     background-color: white;
     box-shadow: 0px 0px 8px 2px  rgb(177, 176, 176);
     border-radius: 5px;
@@ -13,6 +12,7 @@
     width: 300px;
     height: 200px;
     border-radius: 5px;
+    object-fit: fill;
 }
 .itemName{
     display: block;
