--- a/src/app/components/explore/loading-cards/loading-cards.component.html
+++ b/src/app/components/explore/loading-cards/loading-cards.component.html
@@ -1,3 +1,16 @@
 <div class="outerDiv">
 
 </div>
+<div class="outerDiv" >
+
+</div>
+<div class="outerDiv divThree" >
+
+</div>
+<div class="outerDiv divFour">
+
+</div>
+<div class="outerDiv divFive" >
+
+</div>
+
