Made a new branch and now have idea of how to work with the deactive guard

--- a/src/app/components/creator-sections/display-save-draft/display-save-draft.component.html
+++ b/src/app/components/creator-sections/display-save-draft/display-save-draft.component.html
@@ -1,7 +1,7 @@
 <div class="box">
 <span>Would you like to save changes?</span>
 <div class="buttons">
-<button>Yes</button>
-<button>No</button>
+<button (click)="shouldSave()">Yes</button>
+<button (click)="exit()">No</button>
 </div>
 </div>
