--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/writing-third-section.component.css
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/writing-third-section.component.css
@@ -32,6 +32,14 @@ textarea{
 
   
 }
+.uploadedImage{
+    width: 100px;
+    height: 50px;
+}
+.deleteIcon{
+    width: 30px;
+    height: 30px;
+}
 :host{
     display: block;
     flex-direction: column;
