--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/writing-third-section.component.css
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/writing-third-section.component.css
@@ -33,12 +33,35 @@ textarea{
   
 }
 .uploadedImage{
-    width: 100px;
-    height: 50px;
+    width: 250px;
+    height: 200px;
 }
 .deleteIcon{
     width: 30px;
     height: 30px;
+}
+.uploadProgress{
+    position: absolute;
+    top:0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+    background-color: rgba(0, 0, 0, 0.459);
+}
+.imagePreviewOuterDiv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.imagePreviewDiv{
+    position: relative;
 }
 :host{
     display: block;
