--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/writing-third-section.component.html
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/writing-third-section.component.html
@@ -1,29 +1,5 @@
 <h1>Enter steps</h1>
 <div [formGroup]="form" class="descriptionSection">
-  <div formArrayName="steps" class="eachStepDiv">
-    <div *ngFor="let i of steps.controls;let index=index" class="individualDesc" [formGroupName]="index">
-      <div class="">
-        <div class="fomrsSection">
-          <label class="lable">Step {{index+1}}</label>
-          
-          <input formControlName="heading" placeholder="Enter the name of the step">
-        </div>
-      <div class="description">
-        <textarea placeholder="Enter the procedure" formControlName="about" wrap="hard" (ngModelChange)="run($event)" rows="10" maxlength="600" [placeholder]="'Expalin about the procesdure of step'">
-
-        </textarea>
-        <input (change)="fileUploaded($event)" accept="image/jpeg,image/png,image/webp" *ngIf="!fileDataUrl" type="file" class="fileUploader">
-        
-        <div class="imagePreviewOuterDiv">
-          <div class="imagePreviewDiv">
-            <img  class="uploadedImage" *ngIf="fileDataUrl"  [src]="fileDataUrl">
-            <span class="uploadProgress" *ngIf="showProgress">{{progress}}</span>
-          </div>
-          <img src="kitchen-trash-bin.png" *ngIf="showTrashBin" class="deleteIcon" (click)="deleteImage()">
-        </div>
-      </div>
-      </div>
-    </div>
-  </div>
+  <app-inner-third-section *ngFor="let step of steps.controls"></app-inner-third-section>
   <button (click)="addSteps()">+</button>
 </div>
