--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/inner-third-section/inner-third-section.component.html
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/inner-third-section/inner-third-section.component.html
@@ -1,25 +1,28 @@
-<div formArrayName="steps" class="eachStepDiv">
-    <div  class="individualDesc">
-      <div class="">
-        <div class="fomrsSection">
-          <label class="lable">Step {{1}}</label>
-          
-          <input formControlName="heading" placeholder="Enter the name of the step">
-        </div>
-      <div class="description">
-        <textarea placeholder="Enter the procedure" formControlName="about" wrap="hard"  rows="10" maxlength="600" [placeholder]="'Expalin about the procesdure of step'">
 
-        </textarea>
-        <input (change)="fileUploaded($event)"  accept="image/jpeg,image/png,image/webp" *ngIf="!fileDataUrl" type="file" class="fileUploader">
-        
-        <div class="imagePreviewOuterDiv">
-          <div class="imagePreviewDiv">
-            <img  class="uploadedImage" *ngIf="fileDataUrl"  [src]="fileDataUrl">
-            <span class="uploadProgress" *ngIf="showProgress">{{progress}}</span>
-          </div>
-          <img src="kitchen-trash-bin.png" *ngIf="showTrashBin" class="deleteIcon" (click)="deleteImage()">
-        </div>
-      </div>
-      </div>
+<div [formGroup]="form" class="eachStepDiv">
+    <div  class="individualDesc" formArrayName="steps">
+        <div [formGroupName]="postion">
+            <div class="">
+                <div class="fomrsSection">
+                <label class="lable">Step {{postion+1}}</label>
+                
+                <input formControlName="heading" placeholder="Enter the name of the step">
+                </div>
+            <div class="description">
+                <textarea placeholder="Enter the procedure" formControlName="about" wrap="hard"  rows="10" maxlength="600" [placeholder]="'Expalin about the procesdure of step'">
+
+                </textarea>
+                <input (change)="fileUploaded($event)"  accept="image/jpeg,image/png,image/webp" *ngIf="!fileDataUrl" type="file" class="fileUploader">
+                
+                <div class="imagePreviewOuterDiv">
+                <div class="imagePreviewDiv">
+                    <img  class="uploadedImage" *ngIf="fileDataUrl"  [src]="fileDataUrl">
+                    <span class="uploadProgress" *ngIf="showProgress">{{progress}}</span>
+                </div>
+                <img src="kitchen-trash-bin.png" *ngIf="showTrashBin" class="deleteIcon" (click)="deleteImage()">
+                </div>
+            </div>
+            </div>
+    </div>
     </div>
   </div>
