Confulsion on the response

--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/inner-third-section/inner-third-section.component.html
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/inner-third-section/inner-third-section.component.html
@@ -19,7 +19,7 @@
                     <img  class="uploadedImage" *ngIf="fileDataUrl"  [src]="fileDataUrl">
                     <span class="uploadProgress" *ngIf="showProgress">{{progress}}</span>
                 </div>
-                <img src="kitchen-trash-bin.png" *ngIf="showTrashBin" class="deleteIcon" (click)="deleteImage()">
+                <img src="kitchen-trash-bin.png" *ngIf="fileDataUrl" class="deleteIcon" (click)="deleteImage()">
                 </div>
             </div>
             </div>
