--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-top-bar/writing-top-bar.component.html
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-top-bar/writing-top-bar.component.html
@@ -1,3 +1,2 @@
 <button>Save As Draft</button>
-<button>Discard</button>
-<input type="submit" value="Publish">
+<input type="submit" value="Publish" />
