--- a/src/app/components/creator-sections/writing-recipe/individual-input-form/individual-input-form.component.css
+++ b/src/app/components/creator-sections/writing-recipe/individual-input-form/individual-input-form.component.css
@@ -1,19 +1,19 @@
-.fomrsSection:has(.ng-invalid){
+.fomrsSection:has(.ng-invalid) {
     border: 2px solid var(--creator-write-invalid);
 }
-.fomrsSection:has(.ng-invalid) .lable{
+.fomrsSection:has(.ng-invalid) .lable {
     color: var(--creator-write-invalid);
 }
-.fomrsSection:has(.ng-invalid) .inputTypeText{
+.fomrsSection:has(.ng-invalid) .inputTypeText {
     border-bottom: 2px solid var(--creator-write-invalid);
 }
-.fomrsSection:has(.ng-untouched) .lable{
+.fomrsSection:has(.ng-untouched) .lable {
     color: black;
 }
-.fomrsSection:has(.ng-untouched) .inputTypeText{
+.fomrsSection:has(.ng-untouched) .inputTypeText {
     border-bottom: 2px solid black;
 }
-.fomrsSection:has(.ng-untouched){
+.fomrsSection:has(.ng-untouched) {
     border: 2px solid black;
     padding: 15px;
     width: max-content;
@@ -22,54 +22,51 @@
     justify-content: space-evenly;
     position: relative;
     margin-top: 10px;
-    }
+}
 
-.inputTypeText{
-     border: 0px solid black;
-     border-bottom: 2px solid black ;
-     }
-.lable{
+.inputTypeText {
+    border: 0px solid black;
+    border-bottom: 2px solid black;
+}
+.lable {
     font-size: 16px;
     position: absolute;
     background-color: white;
     top: -12.5px;
-    padding:0px 4px;
+    padding: 0px 4px;
     left: 6px;
     font-weight: 600;
 }
-input{
-   font-size: 18px;
-    
+input {
+    font-size: 18px;
 }
-input:focus{
+input:focus {
     outline: none;
 }
-.uploadedImage{
-
+.uploadedImage {
     display: block;
-    width: 200px;  
+    width: 200px;
 }
-.imagePreviewDiv{
+.imagePreviewDiv {
     position: relative;
 }
-.imagePreviewDiv :first-child{
+.imagePreviewDiv :first-child {
     position: absolute;
     bottom: -35px;
     display: block;
-   left: 50%;
-   padding: 5px ;
+    left: 50%;
+    padding: 5px;
     border-radius: 5px;
-   transform: translate(-50%,0px);
+    transform: translate(-50%, 0px);
     width: 20px;
 }
-.imagePreviewDiv :first-child:hover{
+.imagePreviewDiv :first-child:hover {
     background-color: red;
-    padding: 5px ;
+    padding: 5px;
     border-radius: 5px;
-    transition:all 0.1s linear ;
+    transition: all 0.1s linear;
 }
-:host:has(.uploadedImage){
-  
+:host:has(.uploadedImage) {
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
@@ -81,9 +78,21 @@ input:focus{
     width: 300px;
     height: 300px;
 }
-:host:has(.uploadedImage) .fomrsSection{
+:host:has(.uploadedImage) .fomrsSection {
     border: 0px solid black;
 }
-:host:has(.uploadedImage) .lable{
+:host:has(.uploadedImage) .lable {
     display: none;
+}
+.uploadPercentage {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.37);
 }
