--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/parent-writing-recipe.component.css
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/parent-writing-recipe.component.css
@@ -1,4 +1,4 @@
-.fomrsSection{
+.fomrsSection {
     border: 2px solid black;
     padding: 15px;
     width: max-content;
@@ -7,14 +7,24 @@
     justify-content: space-evenly;
     position: relative;
     margin-top: 10px;
-    
 }
-.lable{
+form {
+    width: 100%;
+}
+.lable {
     font-size: 16px;
     position: absolute;
     background-color: white;
     top: -12.5px;
-    padding:0px 4px;
+    padding: 0px 4px;
     left: 6px;
     font-weight: 600;
+}
+:host {
+    outline: 2px solid green;
+    display: flex;
+    width: min(1400px, 90%);
+    align-items: center;
+    justify-content: center;
+    margin: auto;
 }
