--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-first-section/writing-first-section.component.css
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-first-section/writing-first-section.component.css
@@ -1,6 +1,10 @@
-.topWritingSectopn{
+.topWritingSectopn {
     display: grid;
-   grid-auto-flow: column;
-    grid-template-rows:repeat(5,1fr);
-    border: 2px solid black;
+    grid-auto-flow: column;
+    grid-template-rows: repeat(5, 1fr);
+
+    width: 80%;
+    align-items: center;
+    justify-items: center;
+    margin: auto;
 }
