--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/writing-third-section.component.css
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/writing-third-section.component.css
@@ -1,69 +1,20 @@
-.descriptionSection{
+.descriptionSection {
     display: flex;
     flex-direction: column;
     justify-content: center;
-   
+
     align-items: center;
 }
 
-.individualStepHeading{
-    display: flex;
-    align-items: center;
-}
-.fomrsSection{
-
+h1 {
+    margin: 20px auto 10px auto;
     display: block;
-    margin: 5px auto;
+    text-align: center;
 }
-.description{
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-    width:100%;
-   
-}
-textarea{
-    resize:vertical;
-    width: 80%;
-    height: auto;
-}
-.eachStepDiv{
-   width: min(900px,70vw);
-
-  
-}
-.uploadedImage{
-    width: 250px;
-    height: 200px;
-}
-.uploadProgress{
-    position: absolute;
-    top:0px;
-    left: 0px;
-    bottom: 0px;
-    right: 0px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: 20px;
-    font-weight: 600;
-    background-color: rgba(0, 0, 0, 0.459);
-}
-.imagePreviewOuterDiv{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.imagePreviewDiv{
-    position: relative;
-}
-:host{
+:host {
     display: block;
-    flex-direction: column;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+    outline: 2px solid blue;
+
+    width: 100%;
 }
