--- a/src/app/components/creator-sections/writing-recipe/individual-input-form/individual-input-form.component.css
+++ b/src/app/components/creator-sections/writing-recipe/individual-input-form/individual-input-form.component.css
@@ -96,3 +96,12 @@ input:focus {
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.37);
 }
+
+@media only screen and (max-width: 964px) {
+    input {
+        font-size: 22px;
+    }
+    .inputUploader {
+        font-size: 15px;
+    }
+}
