Made some more changes for mobile

--- a/src/app/components/creator-sections/writing-recipe/individual-input-form/individual-input-form.component.html
+++ b/src/app/components/creator-sections/writing-recipe/individual-input-form/individual-input-form.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="formGroup" class="fomrsSection" [ngClass]="classNames">
+<div [formGroup]="formGroup" class="fomrsSection">
     <label class="lable">{{ question.lable }}</label>
     <ng-container [ngSwitch]="question.type" class="Outercontainer">
         <input
