--- a/src/app/components/creator-sections/writing-recipe/individual-input-form/individual-input-form.component.css
+++ b/src/app/components/creator-sections/writing-recipe/individual-input-form/individual-input-form.component.css
@@ -96,12 +96,36 @@ input:focus {
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.37);
 }
-
+:host {
+    display: block;
+    width: 100%;
+    overflow: hidden;
+}
 @media only screen and (max-width: 964px) {
     input {
         font-size: 22px;
+        width: 99%;
     }
     .inputUploader {
         font-size: 15px;
+    }
+    .lable {
+        font-size: 13px;
+        position: absolute;
+        background-color: white;
+        top: -11px;
+        padding: 0px 4px;
+        left: 6px;
+        font-weight: 600;
+    }
+    .fomrsSection:has(.ng-untouched) {
+        border: 2px solid black;
+        padding: 15px;
+        width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        position: relative;
+        margin-top: 10px;
     }
 }
