--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-first-section/writing-first-section.component.css
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-first-section/writing-first-section.component.css
@@ -8,11 +8,16 @@
     justify-items: center;
     margin: auto;
 }
+:host {
+    display: block;
+    width: 100%;
+}
 @media only screen and (max-width: 964px) {
     .topWritingSectopn {
         display: grid;
         grid-auto-flow: row;
         grid-template-columns: 1fr;
         row-gap: 10px;
+        width: 90%;
     }
 }
